--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,10 @@
   "builds": [
     {
       "src": "/api/index.php",
-      "use": "vercel-php@0.6.2"
+      "use": "vercel-php@0.8.0",
+      "config": {
+        "php_version": "8.2"
+      }
     },
     {
       "src": "/public/**",
@@ -42,9 +45,9 @@
     "LOG_DEPRECATIONS_CHANNEL": "null",
     "LOG_LEVEL": "debug",
     "DB_CONNECTION": "mysql",
-    "DB_HOST": "your-external-db-host",
+    "DB_HOST": "your-planetscale-host",
     "DB_PORT": "3306",
-    "DB_DATABASE": "your-database-name",
+    "DB_DATABASE": "clothes",
     "DB_USERNAME": "your-username",
     "DB_PASSWORD": "your-password",
     "SESSION_DRIVER": "database",
@@ -53,21 +56,25 @@
     "SESSION_PATH": "/",
     "SESSION_DOMAIN": "null",
     "BROADCAST_CONNECTION": "log",
-    "FILESYSTEM_DISK": "local",
+    "FILESYSTEM_DISK": "s3",
     "QUEUE_CONNECTION": "database",
-    "CACHE_STORE": "database",
+    "CACHE_STORE": "array",
     "REDIS_CLIENT": "phpredis",
-    "REDIS_HOST": "127.0.0.1",
+    "REDIS_HOST": "your-redis-host",
     "REDIS_PASSWORD": "null",
     "REDIS_PORT": "6379",
-    "MAIL_MAILER": "log",
-    "MAIL_SCHEME": "null",
-    "MAIL_HOST": "127.0.0.1",
-    "MAIL_PORT": "2525",
-    "MAIL_USERNAME": "null",
-    "MAIL_PASSWORD": "null",
+    "MAIL_MAILER": "smtp",
+    "MAIL_HOST": "smtp.sendgrid.net",
+    "MAIL_PORT": "587",
+    "MAIL_USERNAME": "apikey",
+    "MAIL_PASSWORD": "your-sendgrid-api-key",
     "MAIL_FROM_ADDRESS": "hello@example.com",
     "MAIL_FROM_NAME": "${APP_NAME}",
+    "AWS_ACCESS_KEY_ID": "your-aws-key",
+    "AWS_SECRET_ACCESS_KEY": "your-aws-secret",
+    "AWS_DEFAULT_REGION": "us-east-1",
+    "AWS_BUCKET": "your-s3-bucket",
+    "AWS_USE_PATH_STYLE_ENDPOINT": "false",
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
